[example] Show loading spinner while paginating

--- a/examples/apollo-watch-fragments/public/index.css
+++ b/examples/apollo-watch-fragments/public/index.css
@@ -283,10 +283,13 @@ body {
   margin-bottom: -1px;
 }
 
-.todo-list li.load-more input {
+.todo-list li.load-more input,
+.todo-list li.load-more div.lds-spinner {
   display: block;
+  height: 40px;
   margin: 10px auto;
-  padding: 5px 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .footer {
